change canvas size via vss

--- a/index.html
+++ b/index.html
@@ -40,4 +40,9 @@
 		/* This centers our sketch vertically. */
 		align-items: center;
 	}
+
+	canvas {
+		width: 800px !important;
+		height: 800px !important;
+	}
 </style>
