--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="lib/p5.js"></script>
   <!-- <script src="lib/p5.sound.js"></script> -->
   <script src="sketch.js"></script>
+  <script src="NoiseObject.js"></script>
 </head>
 
 <body>
@@ -41,6 +42,7 @@
 		align-items: center;
 	}
 
+	/* resize canvas without changing resolution */
 	canvas {
 		width: 800px !important;
 		height: 800px !important;
