gridLines are now correctly working in both directions

--- a/index.html
+++ b/index.html
@@ -5,13 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>rauschen</title>
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-      background-color: #1b1b1b;
-    }
-  </style>
   <script src="lib/p5.js"></script>
   <!-- <script src="lib/p5.sound.js"></script> -->
   <script src="sketch.js"></script>
@@ -25,15 +18,17 @@
 
 </html>
 
-<!-- center canvas in center of page -->
+<!-- center canvas on page -->
 <style>
 	html, body {
-	height: 100%;
+		height: 100%;
 	}
 
 	body {
-		margin: 0;
 		display: flex;
+		padding: 0;
+		margin: 0;
+		background-color: #1b1b1b;
 
 		/* This centers our sketch horizontally. */
 		justify-content: center;
