--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		display: flex;
 		padding: 0;
 		margin: 0;
-		background-color: #1b1b1b;
+		background-color: black;
 
 		/* This centers our sketch horizontally. */
 		justify-content: center;
