--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>rauschen</title>
   <script src="lib/p5.js"></script>
   <!-- <script src="lib/p5.sound.js"></script> -->
-  <script src="sketch.js"></script>
+  <script src="rauschen.js"></script>
   <script src="NoiseObject.js"></script>
 </head>
 
